WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
18172
REGRESSION (
r31114
-31132): Page renders structured almost horizontally (at flickr.com)
https://bugs.webkit.org/show_bug.cgi?id=18172
Summary
REGRESSION (r31114-31132): Page renders structured almost horizontally (at fl...
Namo
Reported
2008-03-27 21:29:24 PDT
The pages isn't vertical, paragraphs are kind of thrown about. Pretty obvious though.
Attachments
Reduction
(269 bytes, text/html)
2008-03-28 10:57 PDT
,
mitz
no flags
Details
Fix
(23.40 KB, patch)
2008-04-05 15:02 PDT
,
mitz
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Matt Lilek
Comment 1
2008-03-27 21:32:27 PDT
Confirmed with
r31381
, regression from Safari 3.1.
Matt Lilek
Comment 2
2008-03-27 21:56:43 PDT
This regressed between
r31114
and
r31132
. Suspicious commits include:
http://trac.webkit.org/projects/webkit/changeset/31132
http://trac.webkit.org/projects/webkit/changeset/31127
http://trac.webkit.org/projects/webkit/changeset/31116
mitz
Comment 3
2008-03-28 10:57:55 PDT
Created
attachment 20158
[details]
Reduction
Matt Lilek
Comment 4
2008-03-29 11:55:47 PDT
***
Bug 18207
has been marked as a duplicate of this bug. ***
mitz
Comment 5
2008-04-05 15:02:07 PDT
Created
attachment 20356
[details]
Fix
Antti Koivisto
Comment 6
2008-04-08 13:55:30 PDT
r=me
mitz
Comment 7
2008-04-08 14:00:35 PDT
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/31734
>.
Tom Gilder
Comment 8
2008-04-08 16:27:25 PDT
***
Bug 18330
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug